# mesh_conv

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: bendy.blend  input.blend  input_anim.blend  test.glb  test.gltf  test_level.blend  test_level.gltf
examples/test_level/: box_center_mesh.mesh  box_offset_mesh.mesh  ground_mesh.mesh  test_level.level
src/: animation.cpp  animation.h  animimporter.cpp  animimporter.h  main.cpp  mesh.cpp  mesh.h  mesh_converter.cpp  mesh_converter.h  skeleton.cpp  skeleton.h  utils.cpp  utils.h
templates/: anim_template.bt  level_template.bt  mesh_template.bt
test/: input.glb  input.gltf
tools/: blender_export_script.py
